# autoCG

./: .gitignore  README.md  autocg_pipeline.py  autocg_pipeline_nomapping.py  generate.py  pyproject.toml
autoCG/: __init__.py  chem.py  generate.py
autoCG/Calculator/: __init__.py  orca.py  rdFF.py  template.py
autoCG/stereochemistry/: __init__.py
autoCG/subpage/: __init__.py
autoCG/utils/: __init__.py  arranger.py  conformation.py  process.py  stereo.py
